--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel = "stylesheet" href = "styles.css">
 </head>
 <body>
+    <div class = userbtn>
+        <button>Press me</button>
+    </div>
+
     <div class = "container"></div>
     <script src = "etch-a-sketch.js"></script>
 </body>
